# csspin-ce

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  spinfile.yaml
.gitlab/merge_request_templates/: default.md
doc/: conf.py  index.rst  installation.rst  links.rst  relnotes.rst  spinfile.yaml
doc/plugins/: cdbpkg.rst  ce_services.rst  ce_support_tools.rst  contact_elements.rst  localization.rst  mkinstance.rst  pkgtest.rst
src/csspin_ce/: _utils.py  ce_services.py  ce_services_schema.yaml  contact_elements.py  localization.py  localization_schema.yaml  mkinstance.py  mkinstance_schema.yaml  pkgtest.py
src/spin_ce/: cdbpkg.py  cdbpkg_schema.yaml  ce_services.py  ce_services_schema.yaml  ce_support_tools.py  ce_support_tools_schema.yaml  localization.py  localization_schema.yaml  mkinstance.py  mkinstance_schema.yaml  pkgtest.py  pkgtest_schema.yaml
tests/: conftest.py
tests/acceptance/graphviz/: _graphviz.py  spinfile.yaml  test_graphviz_provisioning.py
tests/acceptance/traefik_tls/: spinfile.yaml  test_traefik_tls.py
tests/integration/: test_provisioning.py
tests/integration/yamls/: cdbpkg.yaml  ce_services-latest.yaml  ce_services.yaml  localize-ce.yaml  localize.yaml  mkinstance-latest.yaml  mkinstance.yaml  pkgtest.yaml
tests/unit/: test_ce_services.py
