[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [{name = "CONTACT Software GmbH"}]
dependencies = []
description = "spin_ce"
dynamic = ["version", "readme"]
license = {text = "Copyright (C) 2024 CONTACT Software GmbH"}
maintainers = [
  {name = "Waleri Enns", email = "waleri.enns@contact-software.com"},
  {name = "Benjamin Thomas Schwertfeger", email = "benjaminthomas.schwertfeger@contact-software.com"},
  {name = "Fabian Hafer", email = "fabian.hafer@contact-software.com"}
]
name = "spin_ce"
requires-python = ">=3.9"

# [project.optional-dependencies]
# dev = ["pytest", "pytest-cov", "pytest-mock"]

# [project.scripts]

[project.urls]
Issues = "https://code.contact.de/qs/spin/spin_ce/-/issues"
Repository = "https://code.contact.de/qs/spin/spin_ce"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spin_ce = ["*.yaml",]

[tool.setuptools_scm]
local_scheme = "no-local-version"
